# OneStroke

./: CMakeLists.txt  README.md  conanfile.txt  record.md
asset/: OneStroke.svg:Zone.Identifier
benchmark/: CMakeLists.txt
client/: client  client.cpp
include/: result.h  schedule.h  tag.h  task.h  use_concept.h
include/interface/: handle.h
include/use_func/: echo.h  frame_stack.h  run.h  shedule_task.h  sleep.h  wait_for.h
src/: CMakeLists.txt  main.cpp  schedule.cpp
test/: CMakeLists.txt  placeholder_test.cpp
utils/: empty_base.h  server_socket.h  system.h  use_epoll.h
